--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flutter_doc_gen",
   "displayName": "Flutter/Dart Doc Generator",
   "description": "Generates easy doc comments for flutter/dart code",
+  "publisher": "CoderManuel",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.79.0"
