perf: update plugin name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flutter_doc_gen",
+  "name": "flutter-doc-gen",
   "displayName": "Flutter/Dart Doc Generator",
   "description": "Generates easy doc comments for flutter/dart code",
   "publisher": "CoderManuel",
